Upgraded to JUnit5. closes #4